--- a/style.css
+++ b/style.css
@@ -8,4 +8,29 @@
     font-size: 24px;
     width: 100px;
     line-height: 36px;
+    display: inline-block;
+}
+
+#searchboxContainer {
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+
+#searchbox {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+
+html {
+   margin: 0px;
+   height: 100%;
+   width: 100%;
+}
+
+body {
+	margin: 0px;
+	height: 100%;
+	width: 100%;
 }
